--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "gh-pages": "^3.2.3",
     "mongoose": "^6.2.2"
   },
   "devDependencies": {
